src/objects/World_Bank_Income_Level__mdt.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Level__c</fullName>
        <label>Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Income</fullName>
                    <default>true</default>
                    <label>High Income</label>
                </value>
                <value>
                    <fullName>Upper middle income</fullName>
                    <label>Upper Middle Income</label>
                </value>
                <value>
                    <fullName>Lower middle income</fullName>
                    <label>Lower Middle Income</label>
                </value>
                <value>
                    <fullName>Low Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Asia &amp; Pacific</fullName>
                    <default>true</default>
                    <label>East Asia &amp; Pacific</label>
                </value>
                <value>
                    <fullName>Europe &amp; Central Asia</fullName>
                </value>
                <value>
                    <fullName>Latin America &amp; Caribbean</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; North Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>Sub-Saharan Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WB_Country__c</fullName>
        <label>WB Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>World Bank Income Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>WB_Country__c</columns>
        <columns>Abbreviation__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Income_Level__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>World Bank Income Levels</pluralLabel>
</CustomObject>